# galCIB

./: .gitignore  CONTRIBUTING.md  README.rtf  base-lcdm.ipynb  cib.nosync.code-workspace  cib.py  compare-dopplercib.ipynb  consts.py  cosmology.py  data-measure.ipynb  dummy.npy  gal.py  gal_prop.py  halo.py  inference.py  minimal.ipynb  powerspectra.py  precalc.py  precalculation.py  prof_output.txt  profiler.py  pyproject.toml  sample_NILC.yml  sample_realspaceILC.yml  setup.py  test_notebook.ipynb  utils.py
.github/workflows/: build.yml  lint.yml  test.yml
.ipynb_checkpoints/: base-lcdm-checkpoint.ipynb  namaster-tutorial-checkpoint.ipynb  test_notebook-checkpoint.ipynb
analysis/: inference.py  rotate_cib.py  theory.py
data/minimal/cosmology/: hmfz_h_DopplerCIB.p  plin_unit_Mpc.p  plin_unit_Mpc_DopplerCIB.p  plin_unit_h.p
notebooks/: compare-dopplercib.ipynb  data-measure.ipynb  likelihood.ipynb  namaster-tutorial.ipynb  scratch-temp.ipynb  unwise-compare.ipynb
src/galCIB/: __init__.py  consts.py  cosmology.py  powerspectra.py  precalc.py
src/galCIB.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/galCIB/analysis/: __init__.py  likelihood.py  pipeline.py  utils.py
src/galCIB/cib/: __init__.py  cibmodel.py  default_sfr.py  default_snu.py  registry.py  sfrmodel.py  snumodel.py  utils.py
src/galCIB/clustering/: __init__.py  cib.py  gal.py  halo.py
src/galCIB/cosmology/: __init__.py  core.py  cosmology.py
src/satprofile/: profile.py  utils.py
test/: prof_output.txt  profiler.py  test_basic_init.py
tmp/: bnu.npy  hmf.npy  pz.npz
(+18 files in other folders)
